[metadata]
name = PILOT
author = Julian Cremer
author_email = julian.cremer@pfizer.com
description = A method for the de novo generation of ligands for protein targets
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.11.0
setup_requires =
    setuptools_scm
install_requires =

[mypy]
python_version = 3.11
ignore_missing_imports = True